------------------------------------------------------------------------
r71 | vak | 2008-02-22 21:21:30 +0300 (Fri, 22 Feb 2008) | 3 lines

Updated examples/dtran.b6.


------------------------------------------------------------------------
r70 | leobru | 2008-02-22 20:16:09 +0300 (Fri, 22 Feb 2008) | 2 lines

The service program COPY (PERE) works; added tracing to native e64.

------------------------------------------------------------------------
r69 | vak | 2008-02-22 18:48:12 +0300 (Fri, 22 Feb 2008) | 3 lines

Added missing chars for koi8, cp1251, cp866.


------------------------------------------------------------------------
r68 | vak | 2008-02-22 13:23:19 +0300 (Fri, 22 Feb 2008) | 3 lines

All text strings prepared for localization.


------------------------------------------------------------------------
r67 | leobru | 2008-02-22 08:19:43 +0300 (Fri, 22 Feb 2008) | 1 line

Build fixes, BESM6_PATH checked in one place, better passport parsing, visible overprint
------------------------------------------------------------------------
r66 | vak | 2008-02-22 01:25:50 +0300 (Fri, 22 Feb 2008) | 6 lines

Using gettext() for localization. Convert all text strings, which should
be localized, into _(strings). Run make, then extract string prototypes
from po/besm6.pot, put them to po/ru.po and localize. Run make install,
and besm6 will start speaking Russian.


------------------------------------------------------------------------
r65 | vak | 2008-02-21 23:47:43 +0300 (Thu, 21 Feb 2008) | 4 lines

Fixed printing error messages in Algol-BESM. It uses undocumented
symbol 265 - repeating last character.


------------------------------------------------------------------------
r64 | vak | 2008-02-21 20:55:48 +0300 (Thu, 21 Feb 2008) | 5 lines

Using mkstemp() instead of mktemp: it's more secure.
Using types int64_t and uint64_t, autoconfigured.
No long long's more.


------------------------------------------------------------------------