@@ -2,7 +2,7 @@
 лен 41(2048)^
 eeв1а3
 *name Dtran
-*perso:411614,cont
+*perso: 411614, cont
 *call dtran(stop*)
 *assem
 *read: 1
