@@ -1,4 +1,4 @@
-﻿                                                      22.02.08 М1
+﻿                                                      23.02.08 М1
 
   М О Н И Т О Р-8 0  (3.6)   26.11.83М       (  МС " Д У Б Н А " ИАЭ  )             ШИФР    419999000000
 
@@ -24,13 +24,13 @@
 
 
 *NАМЕ DТRАN
-           *РЕRSО:411614,СОNТ
+           *РЕRSО: 411614, СОNТ
  LIВRАRУ ОТ  28.03.83 М3 ОСАТАL*СЛУГА
            *САLL DТRАN(SТОР*)
                  DТRАN  /01.04.83/
            *АSSЕМ
            *RЕАD: 1
-                                                      22.02.08 М1
+                                                      23.02.08 М1
  АВТОКОД  МАDLЕN
    (1.10.72)
                     SТОР*   :  , NАМЕ,        DТRАN  /01.04.83/
