@@ -1,4 +1,4 @@
-﻿                                                      20.02.08 М1
+﻿                                                      23.02.08 М1
 
   М О Н И Т О Р-8 0  (3.6)   26.11.83М       (  МС " Д У Б Н А " ИАЭ  )             ШИФР    419999000000
 
@@ -30,7 +30,7 @@
            *FULL LISТ
            *FТN
                    INIТFТN     01770
-                                                      20.02.08 М1
+                                                      23.02.08 М1
                    FТN         04130
                    F/ОРТ       40733
  Ф О Р Т Р А Н - Г Д Р
@@ -56,7 +56,7 @@
   015          1000 FОRМАТ (1Х, I4)
   016               ЕND
                    ВСDАРRТ*    40733
-                                                      20.02.08 М1
+                                                      23.02.08 М1
    МАIN  :    , NАМЕ,                                   1 , UТС , РRIМЕ-1                         7 , ХТА , N-*С
    АСС*  :    , LС  , 1                                   , ХТА ,                                   , АТI , 3
    *DIFF   :    , ЕQU , *СОN-*С                         7 , АЕХ , *DIFF+3              *АL00008:    , ВSS ,
@@ -111,7 +111,7 @@
                 , ОСТ , 6400000000000002
    *С    :    , ВSS , 103
                 , ЕND ,
-                                                      20.02.08 М1
+                                                      23.02.08 М1
 
 
   SТАТЕМЕNТ    RЕLАТIVЕ АDDRЕSSЕS ОF SТАТЕМЕNТS (ОСТАL)
